# json-flattify

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: README.md  flatten.py  main.rs  parse.py
src/tests/: array-objs.json  complex.json  lines-complex.jsonl  lines-simple.jsonl  normal.json  simple.json  test_flatten.py  test_parse.py
