[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json-flattify"
version = "0.0.1"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]
